--- a/Project 6/style.css
+++ b/Project 6/style.css
@@ -1,316 +1,365 @@
 body {
-    font-family: "Montserrat", sans-serif;
-  }
+  font-family: "Montserrat", sans-serif;
+}
 
-  /* header */
+/* header */
 
-  header {
-      height: 100vh;
-      background: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5)), url(images/header-img.jpeg) no-repeat center center /cover;
-  }
+header {
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.5)), url(images/header-img.jpeg) no-repeat center center /cover;
+}
 
-  /* navbar */
+/* navbar */
 
-  .nav-menu {
-      background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5));
-      padding: 30px;
-      transition: all .7s;
-  }
+.nav-menu {
+    background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.5));
+    padding: 30px;
+    transition: all .7s;
+}
 
-  .menu-item {
-      font-size: 13px;
-      letter-spacing: 1px;
-      color: #eee;
-      transition: color .5s;
-  }
+.menu-item {
+    font-size: 13px;
+    letter-spacing: 1px;
+    color: #eee;
+    transition: color .5s;
+}
 
-  .menu-item:hover {
-      color: #926105;
-  }
+.menu-item:hover {
+    color: #926105;
+}
 
-  .nav-active {
-      color:  #926105;
-  }
+.nav-active {
+    color:  #926105;
+}
 
-  .line1, .line2, .line3 {
-      width: 22px;
-      height: 3px;
-      margin: 5px;
-      transition: all .4s;
-  }
+.line1, .line2, .line3 {
+    width: 22px;
+    height: 3px;
+    margin: 5px;
+    transition: all .4s;
+}
 
-  .change .line1 {
-      transform: rotate(-45deg) translate(-5px, 6px);
-  }
+.change .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
 
-  .change .line2 {
-      opacity: 0;
-  }
+.change .line2 {
+    opacity: 0;
+}
 
-  .change .line3 {
-      transform: rotate(45deg) translate(-5px, -6px);
-  }
+.change .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
 
-  .custom-navbar {
-      padding: 5px 30px;
-      background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.7));
-  }
-  /* end navbar */
+.custom-navbar {
+    padding: 5px 30px;
+    background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.7));
+}
+/* end navbar */
 
-  /* banner */
+/* banner */
 .banner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
 }
 
 .banner-heading {
-    animation-name: anim;
-    animation-duration: 2s;
+  animation-name: anim;
+  animation-duration: 2s;
 }
 
 .banner-par {
-    animation-name: anim;
-    animation-duration: 2s;
-    animation-delay: .5s;
-    animation-fill-mode: backwards;
+  animation-name: anim;
+  animation-duration: 2s;
+  animation-delay: .5s;
+  animation-fill-mode: backwards;
 }
 
 @keyframes anim {
-    0% {
-        transform: translateX(-100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateX(0);
-        opacity: 1;
-    }
+  0% {
+      transform: translateX(-100px);
+      opacity: 0;
+  }
+  100%{
+      transform: translateX(0);
+      opacity: 1;
+  }
 }
-  /* end banner */
+/* end banner */
 
-  /* end header */
+/* end header */
 
 
 /*mission*/
 
 .new-color {
-    color: #e69f1c;
+  color: #e69f1c;
 }
 .mission{
-  background: #151f20;
+background: #151f20;
 }
 
 .underline{
-  width: 150px;
-  border: 3px solid #eee;
-  margin: auto;
+width: 150px;
+border: 3px solid #eee;
+margin: auto;
 }
 
 .fromLeft{
-  animation-name: fromLeft;
-  animation-duration: 3s;
+animation-name: fromLeft;
+animation-duration: 3s;
 }
 
 .fromRight{
-  animation-name: fromRight;
-  animation-duration: 3s;
+animation-name: fromRight;
+animation-duration: 3s;
 }
 
 @keyframes fromLeft{
-  0%{
-    transform: translateX(-120px);
-    opacity: 0;
-  }
-  100%{
-    transform: translateX(0);
-    opacity: 1;
-  }
+0%{
+  transform: translateX(-120px);
+  opacity: 0;
+}
+100%{
+  transform: translateX(0);
+  opacity: 1;
+}
 }
 
 @keyframes fromRight{
-  0%{
-    transform: translateX(30px);
-    opacity: 0;
-  }
-  100%{
-    transform: translateX(0);
-    opacity: 1;
-  }
+0%{
+  transform: translateX(30px);
+  opacity: 0;
+}
+100%{
+  transform: translateX(0);
+  opacity: 1;
+}
 }
 
 /*end of mission
+
 /* customers */
 .customers {
-    background: #151f20;
+  background: #151f20;
 }
 /* end of customers */
+
+/* collection */ 
+.card-shadow {
+    box-shadow: 5px 8px 20px #444;
+}
+
+.heading {
+    position: absolute; 
+    top: 70%; 
+    right: 0; 
+    font-size: 14px; 
+    letter-spacing: 1px; 
+    background: #222; 
+    width: 70%; 
+    cursor: pointer; 
+    opacity: .7; 
+    transition: all .5s;
+}
+
+.heading:hover {
+    opacity: 1;
+}
+ /* end of collection */
+
+ /* gallery */
+ .underline-dark {
+  width: 150px;
+  border: 3px solid #888;
+  margin: auto;
+  }
+
+.gallery-list-item {
+  color: #777;
+  cursor: pointer;
+  user-select: none;
+}
+.active-item{
+  color: #70aed2;
+}
+ /* end gallery */
+
+/*pricing*/
+.card-1, .card-2, .card-3{
+  background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.5)), url(images/pricing-card-bg.jpeg) no-repeat center / cover;
+  box-shadow: 7px 18px 50px #555;
+}
+
+.card-list-item{
+  border-bottom: 1px groove #eee;
+  width: 55%;
+  margin: auto;
+}
+
+.price-card-button{
+  background: #f5593d;
+  width: 130px;
+  border-radius: 25px;
+  box-shadow: 5px 8px 18px #000;
+  transition: all .2s;
+}
+
+.price-card-button:hover{
+  background: #f9793d;
+  transform: translateY(-2px);
+}
+.moveFromLeft{
+  animation-name: moveFromLeft;
+  animation-duration: 2s;
+}
+.moveFromRight{
+  animation-name: moveFromRight;
+  animation-duration: 2s;
+}
+.moveFromBottom{
+  animation-name: moveFromBottom;
+  animation-duration: 2s;
+}
+
+@keyframes moveFromLeft{
+  0% {
+      transform: translateX(-100px);
+      opacity: 0;
+  }
+  100% {
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+@keyframes moveFromRight{
+  0% {
+      transform: translateX(100px);
+      opacity: 0;
+  }
+
+  100%{
+      transform: translateX(0);
+      opacity: 1;
+  }
+}
+
+@keyframes moveFromBottom{
+  0%{
+      transform: translateY(100px);
+      opacity: 0;
+  }
+
+  100% {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+/*end pricing
+
 
 /* Contact */
 
 .contact {
-    background: linear-gradient(105deg, rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95) 50%, transparent 50%, url(images/form-img.jpeg) center no-repeat center /cover;
+  background: linear-gradient(105deg, rgba(21, 31, 32, 1) 0%, rgba(21, 31, 32, .95) 50%, transparent 50%), url(images/form-img.jpeg) no-repeat center /cover;
 }
 
 .input {
-    background: transparent;
-    border-color: transparent;
-    border-bottom: 2px solid #ccc;
-    border-radius: 0;
-    transition: all .8s;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    -ms-border-radius: 0;
-    -o-border-radius: 0;
-    -webkit-transition: all .8s;
-    -moz-transition: all .8s;
-    -ms-transition: all .8s;
-    -o-transition: all .8s;
+  background: transparent;
+  border-color: transparent;
+  border-bottom: 2px solid #ccc;
+  border-radius: 0;
+  transition: all .8s;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  -webkit-transition: all .8s;
+  -moz-transition: all .8s;
+  -ms-transition: all .8s;
+  -o-transition: all .8s;
 }
 
 .input:focus {
-    background: transparent;
-    border-color: transparent;
-    box-shadow: none;
-    color: #fff;
-    border-bottom: 2px solid #f5593d;
+  background: transparent;
+  border-color: transparent;
+  box-shadow: none;
+  color: #fff;
+  border-bottom: 2px solid #f5593d;
 }
 
 .submit-button {
-    background: #f5593d;
-    color: #eee;
+  background: #f5593d;
+  color: #eee;
 }
 
 .submit-button:hover {
-    background: #f9793d;
-    transform: translateY(-3px);
-    -webkit-transform: translateY(-3px);
-    -moz-transform: translateY(-3px);
-    -ms-transform: translateY(-3px);
-    -o-transform: translateY(-3px);
+  background: #f9793d;
+  transform: translateY(-3px);
+  -webkit-transform: translateY(-3px);
+  -moz-transform: translateY(-3px);
+  -ms-transform: translateY(-3px);
+  -o-transform: translateY(-3px);
 }
 
 .label {
-    color: #777;
-    display: block;
-    margin-top: -70px;
-    margin-left: 4px;
-    font-size: 13px;
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
+  color: #777;
+  display: block;
+  margin-top: -70px;
+  margin-left: 4px;
+  font-size: 13px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
 }
 
-.input:placeholder-shown + .label {
-    transform: translate(20px, 20px);
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transform: translate(20px, 20px);
-    -moz-transform: translate(20px, 20px);
-    -ms-transform: translate(20px, 20px);
-    -o-transform: translate(20px, 20px);
+.input:placeholder-shown+.label {
+  transform: translate(20px, 20px);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transform: translate(20px, 20px);
+  -moz-transform: translate(20px, 20px);
+  -ms-transform: translate(20px, 20px);
+  -o-transform: translate(20px, 20px);
 }
 
 @media(max-width: 992px) {
-    .contact {
-        background: linear-gradient(rgba(21, 31, 32, 1), rgba(21, 31, 32, .95));
-    }
+  .contact {
+      background: linear-gradient(rgba(21, 31, 32, 1), rgba(21, 31, 32, .95));
+  }
 }
 
 .contact-form {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 }
 
 
-/* End of Contact */
-/* end of customers */
-/*pricing*/
-.card-1, .card-2, .card-3{
-    background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.5)), url(images/pricing-card-bg.jpeg) no-repeat center / cover;
-    box-shadow: 7px 18px 50px #555;
-}
+/* End of Contact *
 
-.card-list-item{
-    border-bottom: 1px groove #eee;
-    width: 55%;
-    margin: auto;
-}
 
-.price-carrd-bottom{
-    background: #f5593d;
-    width: 130px;
-    border-radius: 25px;
-    box-shadow: 5px 8px 18px #000;
-    transition: all .2s;
-}
-
-.pricw-card-button:hover{
-    background: #f9793d;
-    transform: translateY(-2px);
-}
-.moveFromLeft{
-    animation-name: mpveFromLeft;
-    animation-duration: 2s;
-}
-.moveFromRight{
-    animation-name: mpveFromRight;
-    animation-duration: 2s;
-}
-.moveFromBottom{
-    animation-name: mpveFromBottom;
-    animation-duration: 2s;
-}
-@keyframes moveFromLeft{
-    0%{
-        transform: translateY(-100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes moveFromRight{
-    0%{
-        transform: translateY(100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes moveFromBottom{
-    0%{
-        transform: translateY(100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-/*end pricing
 
 /* Footer */
 
 .footer-link {
-    color: #eee;
-    font-size: 13px;
-    transition: all .3s;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    -ms-transition: all .3s;
-    -o-transition: all .3s;
+  color: #eee;
+  font-size: 13px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
 }
 
 .footer-link:hover {
-    color: #70aed2;
-    text-decoration: none;
+  color: #70aed2;
+  text-decoration: none;
 }
 
 
